--- a/.github/ISSUE_TEMPLATE/submission.yaml
+++ b/.github/ISSUE_TEMPLATE/submission.yaml
@@ -65,6 +65,7 @@ body:
         - Track 2
         - Track 3
         - Track 4
+        - Track 5
     validations:
       required: true
   - type: input
